--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 
-    <!-- fonts -->
+    <!-- Шрифти -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <!-- normolize -->
+    <!-- Нормолайз -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -23,13 +23,12 @@
       referrerpolicy="no-referrer"
     />
 
-    <!-- base styles -->
+    <!-- Базові стилі -->
     <link rel="stylesheet" href="./css/main.min.css" />
-  
   </head>
 
   <body>
-    <!--heder-->
+    <!-- Хедер -->
     <header class="header">
       <div class="container">
         <nav class="header-nav">
@@ -43,7 +42,7 @@
 
         <ul class="contact-heder">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link header-contact">
+            <a href="mailto:info@devstudio.com" class="link-contact">
               <svg class="header-icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
@@ -51,7 +50,7 @@
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link header-contact">
+            <a href="tel:+380961111111" class="link-contact">
               <svg class="header-icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
@@ -59,11 +58,19 @@
             >
           </li>
         </ul>
+
+        <!-- кнопка мобільного меню -->
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#icon-menu-menu"></use>
+          </svg>
+        </button>
+
       </div>
     </header>
 
     <main>
-      <!--hero-->
+      <!-- Герой -->
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
@@ -71,11 +78,11 @@
         </div>
       </section>
 
-      <!--Особливості-->
+      <!-- Особливості -->
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          
+
           <ul class="features-list">
             <li class="features-item">
               <div class="features-picture">
@@ -128,7 +135,7 @@
         </div>
       </section>
 
-      <!--Про нас-->
+      <!-- Про нас -->
       <section class="about">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
@@ -137,8 +144,10 @@
             <li>
               <div class="about__img">
                 <img
-                  src="./images/studio/img1.jpg"
+                  srcset="./images/about/img1_large@1x.jpg 1x, ./images/about/img1_large@2x.jpg 2x"
+                  src="./images/about/img1_large@1x.jpg"
                   alt="Десктопні додатки"
+                  loading="lazy"
                   width="370"
                   height="294"
                 />
@@ -151,8 +160,10 @@
             <li>
               <div class="about__img">
                 <img
-                  src="./images/studio/img2.jpg"
+                  srcset="./images/about/img2_large@1x.jpg 1x, ./images/about/img2_large@2x.jpg 2x"
+                  src="./images/about/img2_large@1x.jpg"
                   alt="мМобільні додатки"
+                  loading="lazy"
                   width="370"
                   height="294"
                 />
@@ -165,8 +176,10 @@
             <li>
               <div class="about__img">
                 <img
-                  src="./images/studio/img3.jpg"
+                  srcset="./images/about/img3_large@1x.jpg 1x, ./images/about/img3_large@2x.jpg 2x"
+                  src="./images/about/img3_large@1x.jpg"
                   alt="Дизайнерські рішення"
+                  loading="lazy"
                   width="370"
                   height="294"
                 />
@@ -179,17 +192,27 @@
         </div>
       </section>
 
-      <!--Наша команда-->
+      <!-- Наша команда -->
       <section class="team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
               <img
-                src="./images/studio/img-stuf-1.jpg"
+                srcset="
+                  ./images/team/img1_small_450.jpg  450w,
+                  ./images/team/img1_small_900.jpg  900w,
+                  ./images/team/img1_medium_354.jpg 354w,
+                  ./images/team/img1_medium_708.jpg 708w,
+                  ./images/team/img1_large_270.jpg  270w,
+                  ./images/team/img1_large_540.jpg  540w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/team/img1_small_450.jpg"
                 alt="Ігор Дем'яненко"
-                width="270"
-                height="260"
+                loading="lazy"
+                width="450"
+                height="460"
               />
 
               <h3 class="team__name">Ігор Дем'яненко</h3>
@@ -255,12 +278,53 @@
             </li>
 
             <li class="team__item">
-              <img
-                src="./images/studio/img-stuf-2.jpg"
-                alt="Ольга Рєпіна"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/img2_large@1x.webp 1x, ./images/team/img2_large@2x.webp 2x"
+                  type="image/webp"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/img2_large@1x.jpg 1x, ./images/team/img2_large@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- tablet -->
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/img2_medium@1x.webp 1x,
+                    ./images/team/img2_medium@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/img2_medium@1x.jpg 1x, ./images/team/img2_medium@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- phone -->
+                <source media="(max-width: 768px)" srcset="./images/team/img2_medium@1x.webp 1x,
+                ./images/team/img2_medium@2x.webp 2x" type="image/webp">
+
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/img2_small@1x.jpg 1x, ./images/team/img2_small@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <img
+                  src="./images/team/img2_small@1x.jpg"
+                  alt="Ольга Рєпіна"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
 
               <h3 class="team__name">Ольга Рєпіна</h3>
               <p class="team__job" lang="en">Frontend Developer</p>
@@ -325,10 +389,20 @@
 
             <li class="team__item">
               <img
-                src="./images/studio/img-stuf-3.jpg"
+                srcset="
+                  ./images/team/img3_small@1x.jpg  450w,
+                  ./images/team/img3_small@2x.jpg  900w,
+                  ./images/team/img3_medium@1x.jpg 354w,
+                  ./images/team/img3_medium@2x.jpg 708w,
+                  ./images/team/img3_large@1x.jpg  270w,
+                  ./images/team/img3_large@2x.jpg  540w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/team/img3_small@1x.jpg"
                 alt="Микола Тарасов"
-                width="270"
-                height="260"
+                loading="lazy"
+                width="450"
+                height="460"
               />
 
               <h3 class="team__name">Микола Тарасов</h3>
@@ -394,12 +468,37 @@
             </li>
 
             <li class="team__item">
-              <img
-                src="./images/studio/img-stuf-4.jpg"
-                alt="Михайло Єрмаков"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/img4_large@1x.jpg 1x, ./images/team/img4_large@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- tablet -->
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/img4_medium@1x.jpg 1x, ./images/team/img4_medium@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- phone -->
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/img4_small@1x.jpg 1x, ./images/team/img4_small@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <img
+                  src="./images/team/img4_small@1x.jpg"
+                  alt="Михайло Єрмаков"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
 
               <h3 class="team__name">Михайло Єрмаков</h3>
               <p class="team__job" lang="en">PUI Designer</p>
@@ -560,11 +659,39 @@
       </section>
     </main>
 
-    <!--footer-->
+    <!-- Мобільне меню -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg width="40" height="40">
+          <use href="./images/icons.svg#icon-menu-close"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-nav">
+        <li><a href="./index.html" class="current">Студія</a></li>
+        <li><a href="./portfolio.html" class="">Портфоліо</a></li>
+        <li><a href="" class="">Контакти</a></li>
+      </ul>
+
+      <ul class="mobile-contact">
+        <li><a href="" class="tel">+38 096 111 11 11</a></li>
+        <li><a href="" class="">info@devstudio.com</a></li>
+      </ul>
+      <ul class="mobile-cocials">
+        <li class="mobile-cocials-list"><a href="https://www.instagram.com/">Instagram</a></li>
+        <li class="mobile-cocials-list"><a href="https://twitter.com/">Twitter</a></li>
+        <li class="mobile-cocials-list"><a href="https://www.facebook.com/">Facebook</a></li>
+        <li class="mobile-cocials-list"><a href="https://www.linkedin.com/">LinkedIn</a></li>
+      </ul>
+    </div>
+
+    <!-- Футер -->
     <footer class="footer">
       <div class="container footer-items">
         <div class="address-items">
-          <a href="./index.html" class="logo footer-logo" lang="en"> <span class="accent">Web</span>Studio</a>
+          <a href="./index.html" class="logo footer-logo" lang="en">
+            <span class="accent">Web</span>Studio</a
+          >
           <address>
             <ul class="address-footer">
               <li><a href="" class="sity">м. Київ, пр-т Лесі Українки, 26</a></li>
@@ -662,12 +789,12 @@
       </div>
     </footer>
 
-    <!-- модальне вікно -->
+    <!-- Модальне вікно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close>
           <svg width="18" height="18">
-            <use href="./images/icons.svg#icon-close-black-button"></use>
+            <use href="./images/icons.svg#icon-modal-close-button"></use>
           </svg>
         </button>
 
@@ -739,6 +866,17 @@
       </div>
     </div>
 
+    <!-- Скрипт модального вікна  -->
     <script src="./js/modal.js"></script>
+
+    <!-- Скрипт мобільного меню -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
+    
   </body>
 </html>
