ДЗ к сдаче портфолию и миксин

--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             <use href="./images/icons.svg#icon-menu-menu"></use>
           </svg>
         </button>
-
       </div>
     </header>
 
@@ -308,8 +307,14 @@
                 />
 
                 <!-- phone -->
-                <source media="(max-width: 768px)" srcset="./images/team/img2_medium@1x.webp 1x,
-                ./images/team/img2_medium@2x.webp 2x" type="image/webp">
+                <source
+                  media="(max-width: 768px)"
+                  srcset="
+                    ./images/team/img2_medium@1x.webp 1x,
+                    ./images/team/img2_medium@2x.webp 2x
+                  "
+                  type="image/webp"
+                />
 
                 <source
                   media="(max-width: 767px)"
@@ -877,6 +882,5 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./js/mobile-menu.js"></script>
-    
   </body>
 </html>
