--- a/portfolio.html
+++ b/portfolio.html
@@ -83,10 +83,24 @@
           </ul>
 
           <ul class="project">
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio/img1.jpg" alt="Технохряк" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/img-1_small_450.jpg 450w,
+                      ./images/portfolio/img-1_small_900.jpg 900w,
+                      ./images/portfolio/img-1_med_354.jpg   354w,
+                      ./images/portfolio/img-1_med_708.jpg   708w,
+                      ./images/portfolio/img-1_large_370.jpg 370w,
+                      ./images/portfolio/img-1_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-1_small_450.jpg"
+                    alt="Технокряк"
+                    loading="lazy"
+                  />
+
                   <div class="overlay">
                     <div class="overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -102,10 +116,24 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio/img2.jpg" alt="Постер" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/img-2_small_450.jpg 450w,
+                      ./images/portfolio/img-2_small_900.jpg 900w,
+                      ./images/portfolio/img-2_med_354.jpg   354w,
+                      ./images/portfolio/img-2_med_708.jpg   708w,
+                      ./images/portfolio/img-2_large_370.jpg 370w,
+                      ./images/portfolio/img-2_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-2_small_450.jpg"
+                    alt="Постер"
+                    loading="lazy"
+                  />
+
                   <div class="overlay">
                     <div class="overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -121,10 +149,24 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio/img3.jpg" alt="ІРесторан" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/img-3_small_450.jpg 450w,
+                      ./images/portfolio/img-3_small_900.jpg 900w,
+                      ./images/portfolio/img-3_med_354.jpg   354w,
+                      ./images/portfolio/img-3_med_708.jpg   708w,
+                      ./images/portfolio/img-3_large_370.jpg 370w,
+                      ./images/portfolio/img-3_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-3_small_450.jpg"
+                    alt="Ресторан"
+                    loading="lazy"
+                  />
+
                   <div class="overlay">
                     <div class="overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -140,14 +182,22 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
                   <img
-                    src="./images/portfolio/img4.jpg"
-                    alt="Проєкт Прайм"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio/img-4_small_450.jpg 450w,
+                      ./images/portfolio/img-4_small_900.jpg 900w,
+                      ./images/portfolio/img-4_med_354.jpg   354w,
+                      ./images/portfolio/img-4_med_708.jpg   708w,
+                      ./images/portfolio/img-4_large_370.jpg 370w,
+                      ./images/portfolio/img-4_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-4_small_450.jpg"
+                    alt="Проєкт Првйм"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <div class="overlay-text">
@@ -164,14 +214,22 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
                   <img
-                    src="./images/portfolio/img5.jpg"
-                    alt="Проєкт Боксес"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio/img-5_small_450.jpg 450w,
+                      ./images/portfolio/img-5_small_900.jpg 900w,
+                      ./images/portfolio/img-5_med_354.jpg   354w,
+                      ./images/portfolio/img-5_med_708.jpg   708w,
+                      ./images/portfolio/img-5_large_370.jpg 370w,
+                      ./images/portfolio/img-5_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-5_small_450.jpg"
+                    alt="Проєкт Бокс"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <div class="overlay-text">
@@ -188,14 +246,22 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
                   <img
-                    src="./images/portfolio/img6.jpg"
+                    srcset="
+                      ./images/portfolio/img-6_small_450.jpg 450w,
+                      ./images/portfolio/img-6_small_900.jpg 900w,
+                      ./images/portfolio/img-6_med_354.jpg   354w,
+                      ./images/portfolio/img-6_med_708.jpg   708w,
+                      ./images/portfolio/img-6_large_370.jpg 370w,
+                      ./images/portfolio/img-6_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-6_small_450.jpg"
                     alt="Натхнення без кордонів"
-                    width="370"
-                    height="294"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <div class="overlay-text">
@@ -212,10 +278,23 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
-                  <img src="./images/portfolio/img7.jpg" alt="Видання" width="370" height="294" />
+                  <img
+                    srcset="
+                      ./images/portfolio/img-7_small_450.jpg 450w,
+                      ./images/portfolio/img-7_small_900.jpg 900w,
+                      ./images/portfolio/img-7_med_354.jpg   354w,
+                      ./images/portfolio/img-7_med_708.jpg   708w,
+                      ./images/portfolio/img-7_large_370.jpg 370w,
+                      ./images/portfolio/img-7_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-7_small_450.jpg"
+                    alt="Видання"
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <div class="overlay-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
@@ -231,14 +310,22 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
                   <img
-                    src="./images/portfolio/img8.jpg"
+                    srcset="
+                      ./images/portfolio/img-8_small_450.jpg 450w,
+                      ./images/portfolio/img-8_small_900.jpg 900w,
+                      ./images/portfolio/img-8_med_354.jpg   354w,
+                      ./images/portfolio/img-8_med_708.jpg   708w,
+                      ./images/portfolio/img-8_large_370.jpg 370w,
+                      ./images/portfolio/img-8_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-8_small_450.jpg"
                     alt="Проєкт ЛАБ"
-                    width="370"
-                    height="294"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <div class="overlay-text">
@@ -255,14 +342,22 @@
               </a>
             </li>
 
-            <li class="item">
+            <li class="project-item">
               <a class="project-link" href="" target="_blank" rel="noopener noreferrer">
                 <div class="project-thumb">
                   <img
-                    src="./images/portfolio/img9.jpg"
+                    srcset="
+                      ./images/portfolio/img-9_small_450.jpg 450w,
+                      ./images/portfolio/img-9_small_900.jpg 900w,
+                      ./images/portfolio/img-9_med_354.jpg   354w,
+                      ./images/portfolio/img-9_med_708.jpg   708w,
+                      ./images/portfolio/img-9_large_370.jpg 370w,
+                      ./images/portfolio/img-9_large_740.jpg 740w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                    src="./images/portfolio/img-9_small_450.jpg"
                     alt="Зростаючий бізнес"
-                    width="370"
-                    height="294"
+                    loading="lazy"
                   />
                   <div class="overlay">
                     <div class="overlay-text">
