--- a/index.html
+++ b/index.html
@@ -197,7 +197,39 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img
+              <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/img1_large@1x.jpg 1x, ./images/team/img1_large@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- tablet -->
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/img1_medium@1x.jpg 1x, ./images/team/img1_medium@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- phone -->
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/img1_small@1x.jpg 1x, ./images/team/img1_small@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <img
+                  src="./images/team/img1_small@1x.jpg"
+                  alt="Ігор Дем'яненко"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
+
+              <!-- <img
                 srcset="
                   ./images/team/img1_small_450.jpg  450w,
                   ./images/team/img1_small_900.jpg  900w,
@@ -212,7 +244,7 @@
                 loading="lazy"
                 width="450"
                 height="460"
-              />
+              /> -->
 
               <h3 class="team__name">Ігор Дем'яненко</h3>
               <p class="team__job" lang="en">Product Designer</p>
@@ -393,22 +425,38 @@
             </li>
 
             <li class="team__item">
-              <img
-                srcset="
-                  ./images/team/img3_small@1x.jpg  450w,
-                  ./images/team/img3_small@2x.jpg  900w,
-                  ./images/team/img3_medium@1x.jpg 354w,
-                  ./images/team/img3_medium@2x.jpg 708w,
-                  ./images/team/img3_large@1x.jpg  270w,
-                  ./images/team/img3_large@2x.jpg  540w
-                "
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
-                src="./images/team/img3_small@1x.jpg"
-                alt="Микола Тарасов"
-                loading="lazy"
-                width="450"
-                height="460"
-              />
+              <picture>
+                <!-- desktop -->
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./images/team/img3_large@1x.jpg 1x, ./images/team/img3_large@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- tablet -->
+
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./images/team/img3_medium@1x.jpg 1x, ./images/team/img3_medium@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <!-- phone -->
+                <source
+                  media="(max-width: 767px)"
+                  srcset="./images/team/img3_small@1x.jpg 1x, ./images/team/img3_small@2x.jpg 2x"
+                  type="image/jpg"
+                />
+
+                <img
+                  src="./images/team/img3_small@1x.jpg"
+                  alt="Микола Тарасов"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+                />
+              </picture>
+              
 
               <h3 class="team__name">Микола Тарасов</h3>
               <p class="team__job" lang="en">Marketing</p>
