--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
           <h2 class="section-title">Постійні клієнти</h2>
 
           <ul class="clients__logo">
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link"
                 href=""
@@ -638,7 +638,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link"
                 href=""
@@ -652,7 +652,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link"
                 href=""
@@ -666,7 +666,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link"
                 href=""
@@ -680,7 +680,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link"
                 href=""
@@ -694,7 +694,7 @@
               </a>
             </li>
 
-            <li>
+            <li class="clients__item">
               <a
                 class="clients__link"
                 href=""
